Update download scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Tools/BalancedSSP/Software/Models/SS_SVM/SSD_TR1001.libsvm.scale.model
 ReadMe_self.md
 move_largefiles.sh
 Database
+tempDownloads
